--- a/task-1-customized-config.json
+++ b/task-1-customized-config.json
@@ -29,7 +29,7 @@
   },
   "generation": {
     "max_length": 20,
-    "deterministic": false,
+    "deterministic": true,
     "temperature": 0.4
   }
 }
