--- a/task-2.4.1-config.json
+++ b/task-2.4.1-config.json
@@ -1,5 +1,5 @@
 {
-  "experiment_name": "task-1.3.5-config",
+  "experiment_name": "task-2.4.1-config",
   "dataset": {
     "training_ids_file_path": "./train_ids.csv",
     "validation_ids_file_path": "./val_ids.csv",
@@ -13,18 +13,18 @@
     "num_workers": 4
   },
   "experiment": {
-    "num_epochs": 5,
-    "learning_rate": 5e-4,
+    "num_epochs": 3,
+    "learning_rate": 1e-3,
     "optimizer": "Adam",
     "weight_decay": 1e-4,
-    "lr_scheduler": "steplr",
+    "lr_scheduler": "none",
     "early_stop": "true",
     "patience": 3
   },
   "model": {
-    "hidden_size": 256,
-    "embedding_size": 200,
-    "model_type": "Custom",
+    "hidden_size": 512,
+    "embedding_size": 300,
+    "model_type": "Resnet",
     "keep_image": false
   },
   "generation": {
